# BMS

./: README.md  main.py  pyproject.toml
bms/: __init__.py  aa.txt  models.py  site.db
bms/main/: forms.py  routes.py
bms/owners/: routes.py
bms/parents/: routes.py
bms/static/: dashboard.css  main.css  main.js
bms/templates/: about.html  add_car.html  car_info.html  car_list.html  contact.html  dashboard_layout.html  del_scence.txt  footer.html  index.html  layout.html  login.html  owner_dash.html  owner_profile.html  parent_dash.html  parent_profile.html  register.html  salary_list.html  school_list.html  student_list.html
