[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
name = "root"
version = "0.0.0"
description="flask template"
[tool.poetry.dependencies]
flask = "==1.0.2"
python = "^3.8"
flask-sqlalchemy = "^2.4.4"
flask-wtf = "^0.14.3"
wtforms = "^2.3.3"
flask-bcrypt = "^0.7.1"
flask-login = "^0.5.0"
